--- a/main.html
+++ b/main.html
@@ -85,7 +85,11 @@
         </ul>
       </nav>
     </header>
-    <div class="visual">비주얼</div>
+    <div class="visual">
+      <div class="visual-text">
+        Web Standards &amp; Accessibility
+      </div>
+    </div>
     <main class="main-content">
       <div class="group group1">그룹1</div>
       <div class="group group2">그룹2</div>
@@ -96,6 +100,9 @@
       <footer class="footer">푸터</footer>
     </div>
   </div>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/menu-tab.js"></script>
 </body>
 
 </html>
