--- a/main.html
+++ b/main.html
@@ -91,7 +91,29 @@
       </div>
     </div>
     <main class="main-content">
-      <div class="group group1">그룹1</div>
+      <div class="group group1">
+        <div class="login">
+          <h2 class="login-heading">로그인</h2>
+          <form action="javascript:alert('하이');" class="login-form">
+            <fieldset>
+              <legend>회원 로그인 폼</legend>
+              <div class="user-email">
+                <label for="user-email">아이디</label>
+                <input type="email" id="user-email" placeholder="ID or Email" required>
+              </div>
+              <div class="user-pw">
+                <label for="user-pw">비밀번호</label>
+                <input type="password" id="user-pw" placeholder="8자리 이상" required>
+              </div>
+              <button type="submit" class="btn-login">로그인</button>
+            </fieldset>
+          </form>
+          <ul class="member">
+            <li><a href="#">회원가입</a></li>
+            <li><a href="#">아이디/비밀번호찾기</a></li>
+          </ul>
+        </div>
+      </div>
       <div class="group group2">그룹2</div>
       <div class="group group3">그룹3</div>
     </main>
