--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <header class="header" id="header">
       <h1 class="logo">
         <a href="#">
-          <img src="images/logo.png" alt="web cafe">
+          <img src="images/logo.png" alt="web cafe" title="웹카페">
         </a>
       </h1>
       <ul class="info-menu">
@@ -113,6 +113,27 @@
             <li><a href="#">아이디/비밀번호찾기</a></li>
           </ul>
         </div>
+        <div class="validation">
+          <h2 class="readable-hidden">유효성 검사 배너 링크</h2>
+          <ul class="validation-list">
+            <li><a href="https://validator.w3.org" target="_black" title="마크업 유효성 검사 사이트로 이동(새창)">W3C Markup Validation</a></li>
+            <li><a href="https://jigsaw.w3.org/css-validator/" target="_black" title="CSS 유효성 검사 사이트로 이동(새창)">CSS Validation Service</a></li>
+          </ul>
+        </div>
+
+        <div class="term">
+          <h2 class="term-heading">웹 관련 용어</h2>
+          <dl class="term-list">
+            <dt class="term-list-title">웹표준 이란?</dt>
+            <dd class="term-list-thumbnail">
+              <img src="./images/web_standards.gif" alt="W3C 로고">
+            </dd>
+            <dd class="term-list-brief">
+              W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준 규격은...
+            </dd>
+          </dl>
+        </div>
+
       </div>
       <div class="group group2">그룹2</div>
       <div class="group group3">그룹3</div>
