--- a/main.html
+++ b/main.html
@@ -145,7 +145,27 @@
         </div>
 
       </div>
-      <div class="group group2">그룹2</div>
+      <div class="group group2">
+
+
+        <div class="search">
+          <h2 class="readable-hidden">검색</h2>
+          <form action="javascript:alert('검색이 완료되었습니다.');" class="search-form">
+            <fieldset>
+              <legend>검색 폼</legend>
+              <div class="flex-container">
+                <label for="search">자료검색</label>
+                <input type="search" id="search" placeholder="검색어를 입력하세요." required>
+                <button type="submit" class="btn-search">검색</button>
+              </div>
+            </fieldset>
+
+          </form>
+
+        </div>
+
+
+      </div>
       <div class="group group3">그룹3</div>
     </main>
     <article class="slogan">슬로건</article>
