--- a/main.html
+++ b/main.html
@@ -215,7 +215,6 @@
             <a href="#" class="pds-more icon-more" title="자료실" target="_blank">더보기</a>
           </div>
         </div>
-
         <div class="news">
           <h2 class="news-heading">새소식</h2>
           <a href="#">
@@ -232,16 +231,101 @@
           <a href="#" class="news-more icon-more" title="새소식" target="_blank">더보기</a>
         </div>
       </div>
-      <div class="group group3">그룹3</div>
+      <div class="group group3">
+        <div class="event-related">
+          <div class="event">
+            <h2 class="event-heading">신규 <span>이벤트</span></h2>
+            <ul id="event-detail">
+              <li>
+                <p>
+                  <img src="images/free_gift.gif" alt="이벤트 경품: 도서 웹표준 핵심 가이드북2 HTML5+CSS3" class="event-thumbnail">
+                </p>
+                <p class="event-brief">
+                  <em>웹표준 핵심 가이드북2</em> 출시! 선착순 500명 한정으로 증정.
+                </p>
+              </li>
+            </ul>
+            <div class="btn-event">
+              <button class="btn-event-prev" type="button">이전</button>
+              <button class="btn-event-next" type="button">다음</button>
+            </div>
+          </div>
+
+          <div class="related">
+            <h2 class="related-heading">관련 <span>사이트</span></h2>
+            <ul class="related-list" tabindex="0">
+              <li>
+                <a href=" # " target="_blank">패스트캠퍼스</a>
+              </li>
+              <li>
+                <a href="# " target="_blank">W3C</a>
+              </li>
+              <li>
+                <a href="# " target="_blank">웹 접근성 연구소</a>
+              </li>
+              <li>
+                <a href="# " target="_blank">CSS Zen Garden</a>
+              </li>
+              <li>
+                <a href="# " target="_blank">네이버 카페</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="pop-site">
+          <h2 class="pop-site-heading">인기 <span>사이트</span></h2>
+          <ol class="pop-site-rank">
+            <li class="no1">W3C <em class="up">상승</em></li>
+            <li class="no2">Web Standards <em class="down">하락</em></li>
+            <li class="no3">CSS Zengarden <em class="stop">유지</em></li>
+            <li class="no4">Naver Cafe <em class="up">상승</em></li>
+          </ol>
+          <a href="#" class="pop-site-more icon-more" title="인기 사이트" target="_blank">더보기</a>
+        </div>
+
+      </div>
     </main>
-    <article class="slogan">슬로건</article>
+
+    <article class="slogan">
+      <h2 class="slogan-heading" title="웹카페에서 웹표준을">슬로건</h2>
+      <p class="slogan-content">
+        <q cite="http://w3.org/WAI/">
+          The power of the Web is in its universality, Access by everyone regardless of disability is an essential aspect.
+        </q> Tim Berners - Lee , W3C Director and inventor of the World Wide Web
+      </p>
+      <footer class="readable-hidden">출처 : WAI - http://w3.org/WAI/</footer>
+    </article>
+
     <div class="footer-bg">
-      <footer class="footer">푸터</footer>
+      <footer class="footer">
+        <a href="#" class="footer-logo">
+          <img src="images/footer_logo.png" alt="web cafe">
+        </a>
+        <ul class="guide">
+          <li><a href="#">회사소개</a></li>
+          <li><a href="#">개인정보 보호정책</a></li>
+          <li><a href="#">이메일주소 무단수집 거부</a></li>
+          <li><a href="#">contact us</a></li>
+          <li><a href="#">site map</a></li>
+        </ul>
+        <address class="address">
+          <span>서울시 마포구 상수동 123-12 한주빌딩 5층</span>
+          <span>전화: 02-234-5678</span>
+          <span>E-MAIL: webmaster@webcafe2010.com</span>
+        </address>
+        <div class="copyright">Copyright since &copy; 2010 by Web Cafe CORPORATION ALL RIGHTS RESERVED.</div>
+        <div class="tech-logo">
+          <img src="images/html5_logo.png" alt="최신 웹표준 기술인 HTML5를 적용하였습니다.">
+          <img src="images/css3_logo.png" alt="최신 웹표준 기술인 CSS3를 적용하였습니다.">
+        </div>
+      </footer>
     </div>
   </div>
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/menu-tab.js"></script>
+  <script src="js/jquery.min.js "></script>
+  <script src="js/menu-tab.js "></script>
 </body>
 
 </html>
