edit css/stylesheet.css main.html delete background color

--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div class="skip-nav">
+    <a href="#main" class="a11y">메인 바로가기</a>
+  </div>
   <div class="wrapper">
     <header class="header" id="header">
       <h1 class="logo">
@@ -90,9 +93,9 @@
         Web Standards &amp; Accessibility
       </div>
     </div>
-    <main class="main-content">
+    <main class="main-content" id="main">
       <div class="group group1">
-        <div class="login">
+        <div class="login" id="login">
           <h2 class="login-heading">로그인</h2>
           <form action="javascript:alert('하이');" class="login-form">
             <fieldset>
